--- a/ST10083735_PROG6221_POE/MainWindow.xaml
+++ b/ST10083735_PROG6221_POE/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ST10083735_PROG6221_POE"
         mc:Ignorable="d"
-        Title="Better Budgets" Height="769" Width="1458" FontFamily="Verdana" FontSize="14" ResizeMode="NoResize" Icon="/coin-icon.png" WindowStartupLocation="CenterScreen">
-    <Grid x:Name="mainFrm" Margin="0,0,0,33">
+        Title="Better Budgets" Height="794" Width="1458" FontFamily="Verdana" FontSize="14" ResizeMode="NoResize" Icon="/coin-icon.png" WindowStartupLocation="CenterScreen">
+    <Grid x:Name="mainFrm" Margin="0,0,0,5">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="42*"/>
-            <ColumnDefinition Width="523*"/>
+            <ColumnDefinition Width="11*"/>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="225*"/>
         </Grid.ColumnDefinitions>
-        <Canvas x:Name="mainpnl" Margin="24,18,903,32" Grid.ColumnSpan="2" Visibility="Hidden">
+        <Canvas x:Name="mainpnl" Margin="24,18,903,32" Grid.ColumnSpan="3" Visibility="Hidden">
             <Image x:Name="mainImg" Height="506" Canvas.Top="-8" Width="509" Source="/Currency_Flatline.png" Stretch="UniformToFill"/>
             <Label x:Name="headinglb" Content="Better Budgets" Height="55" Canvas.Left="110" Canvas.Top="446" Width="289" FontFamily="Verdana" FontSize="36" />
             <TextBlock x:Name="subheadinglb" Height="51" Canvas.Left="103" Canvas.Top="518" Text="Save more money by spending more consciously today." TextWrapping="Wrap" Width="303" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="23" FontSize="20" FontFamily="Calibri Light"/>
@@ -22,6 +23,57 @@
             -->
 
             <Button x:Name="startbtn"  Content="Get Started" Height="44" Canvas.Left="137" Canvas.Top="595" Width="231" Foreground="White" FontWeight="Normal" FontSize="18" BorderThickness="0" Click="startbtn_Click">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Button}" >
+                        <Setter Property="Background" Value="#FF60B64F"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}" CornerRadius="15">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#4c913f"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+
+                </Button.Resources>
+            </Button>
+
+            <!--End-->
+        </Canvas>
+        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="745" Margin="24,18,0,0" VerticalAlignment="Top" Width="634" Visibility="Visible" Grid.ColumnSpan="3">
+            <Label x:Name="homelb" Content="Home" Height="40" Canvas.Left="24" Canvas.Top="10" Width="111" FontSize="30" FontWeight="Normal"/>
+            <Image x:Name="bellpbx" Height="56" Canvas.Left="536" Canvas.Top="21" Width="73" Source="/bell-icon.png"/>
+            <Button x:Name="searchBarbtn" Content="Enter expense name" Height="43" Canvas.Left="24" Canvas.Top="94" Width="343" Foreground="#FF60B64F" FontSize="16" Click="searchBarbtn_Click" >
+                <Button.Resources>
+                    <Style TargetType="{x:Type Button}" >
+                        <Setter Property="Background" Value="#f2f2f2"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}" CornerRadius="25">
+                                        <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Center" Content="      Enter expense name"/>
+                                    </Border>
+
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+
+                </Button.Resources>
+            </Button>
+            <TextBox x:Name="searchtxt" Canvas.Left="58" Canvas.Top="100" Text=""  TextWrapping="Wrap" Width="274" Height="31" Background="#FFF2F2F2" Foreground="#FF60B64F" BorderThickness="0" BorderBrush="#FFF2F2F2" SelectionBrush="#FF1647CE" VerticalContentAlignment="Center" FontSize="16" Visibility="Hidden"/>
+            <Image x:Name="searchpbx" Height="43" Canvas.Left="383" Canvas.Top="94" Width="63" Source="/search-icon.png"/>
+            <Label x:Name="summarylb" Content="Summary" Height="48" Canvas.Left="24" Canvas.Top="183" Width="171" FontSize="30" FontWeight="Normal"/>
+            <Button Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16">
                 <Button.Resources>
                     <Style TargetType="{x:Type Button}" >
                         <Setter Property="Background" Value="#FF60B64F"/>
@@ -45,11 +97,18 @@
 
                 </Button.Resources>
             </Button>
-
-            <!--End-->
-        </Canvas>
-        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="717" Margin="24,18,0,0" VerticalAlignment="Top" Width="634" Visibility="Visible" Grid.ColumnSpan="2">
-            <Label x:Name="homelb" Content="Home" Height="40" Canvas.Left="24" Canvas.Top="10" Width="111" FontSize="30" FontWeight="Normal"/>
+            <Label x:Name="summaryInfolb" Content="Income:&#10;Tax:&#10;Groceries:&#10;Water and lights:&#10;Travel:&#10;Cellphone/telephone:&#10;Other:" Height="302" Canvas.Left="24" Canvas.Top="247" Width="266" FontSize="22" FontFamily="Calibri Light" />
+            <Label x:Name="amountslb" Content="R0&#10;R0&#10;R0&#10;R0&#10;R0&#10;R0&#10;R0" Height="302" Canvas.Left="337" Canvas.Top="247" Width="266" FontSize="22" FontFamily="Calibri" FontWeight="Bold" Foreground="#FF60B64F" />
+            <RichTextBox Height="105" Canvas.Left="24" Canvas.Top="570" Width="496" BorderBrush="White" IsReadOnly="True" BorderThickness="0" FontFamily="Calibri Light" FontSize="20">
+                <FlowDocument>
+                    <Paragraph>
+                        <Run Text="You have R0 left for the month.&#10;&#10;You have spent 0% of your income."/>
+                    </Paragraph>
+                </FlowDocument>
+            </RichTextBox>
+            <Image x:Name="exitimg" Height="49" Canvas.Left="542" Canvas.Top="675" Width="49" Source="/exit-icon.png" MouseDown="exitimg_MouseDown" RenderTransformOrigin="0.62,0.789"/>
+            <Image Height="49" Canvas.Left="24" Canvas.Top="677" Width="49" Source="/home-icon.png" RenderTransformOrigin="0.492,0.482"/>
+            <Image Height="49" Canvas.Left="292" Canvas.Top="677" Width="50" Source="/coin-icon.png" RenderTransformOrigin="0.384,-0.034"/>
         </Canvas>
     </Grid>
 
