--- a/ST10083735_PROG6221_POE/MainWindow.xaml
+++ b/ST10083735_PROG6221_POE/MainWindow.xaml
@@ -74,7 +74,7 @@
             <TextBox x:Name="searchtxt" Canvas.Left="58" Canvas.Top="100" Text=""  TextWrapping="Wrap" Width="274" Height="31" Background="#FFF2F2F2" Foreground="#FF60B64F" BorderThickness="0" BorderBrush="#FFF2F2F2" SelectionBrush="#FF1647CE" VerticalContentAlignment="Center" FontSize="16" Visibility="Hidden" KeyDown="searchtxt_KeyDown"/>
             <Image x:Name="searchpbx" Height="43" Canvas.Left="377" Canvas.Top="94" Width="44" Source="/search-icon.png" RenderTransformOrigin="-0.178,0.505" MouseDown="searchpbx_MouseDown"/>
             <Label x:Name="summarylb" Content="Summary" Height="48" Canvas.Left="24" Canvas.Top="183" Width="171" FontSize="30" FontWeight="Normal"/>
-            <Button Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16">
+            <Button x:Name="Orderbtn" Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16" Visibility="Hidden" Click="Orderbtn_Click">
                 <Button.Resources>
                     <Style TargetType="{x:Type Button}" >
                         <Setter Property="Background" Value="#FF60B64F"/>
@@ -217,33 +217,63 @@
         <Canvas x:Name="vehiclepnl" HorizontalAlignment="Left" Height="745" Margin="609,28,0,0" VerticalAlignment="Top" Width="622" Visibility="Visible" Grid.Column="2">
             <Label x:Name="vehiclelb" Content="Vehicles" Canvas.Left="10" Canvas.Top="10" FontSize="30" FontWeight="Normal"/>
             <RadioButton x:Name="yesrbtn" Content="Yes" Height="25" Canvas.Left="311" Canvas.Top="94" Width="105" FontSize="16" GroupName="carGrp" Checked="yesrbtn_Checked"/>
-            <RadioButton x:Name="norbtn" Content="No" Height="25" Canvas.Left="398" Canvas.Top="94" Width="90" FontSize="16" GroupName="carGrp" Checked="buygrp_Checked"/>
-            <Canvas x:Name="vehiclePurchasepnl" Height="346" Canvas.Left="19" Canvas.Top="136" Width="578" Visibility="Visible">
-                <Image x:Name="buypbx5" Height="52" Canvas.Left="15" Canvas.Top="30" Width="51" Source="/rent-icon.png"/>
-                <Image x:Name="buypbx6" Height="52" Canvas.Left="15" Canvas.Top="108" Width="51" Source="/rent-icon.png"/>
-                <Image x:Name="buypbx7" Height="52" Canvas.Left="15" Canvas.Top="185" Width="51" Source="/rent-icon.png"/>
-                <Image x:Name="buypbx8" Height="52" Canvas.Left="15" Canvas.Top="269" Width="51" Source="/rent-icon.png"/>
-                <Image x:Name="editPurchasePricepbx1" Height="40" Canvas.Left="518" Canvas.Top="36" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editPurchasePricepbx_MouseDown"/>
-                <Image x:Name="editDepositpbx1" Height="40" Canvas.Left="518" Canvas.Top="114" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editDepositpbx_MouseDown"/>
-                <Image x:Name="editInterestpbx1" Height="40" Canvas.Left="518" Canvas.Top="191" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editInterestpbx_MouseDown"/>
-                <Image x:Name="editMonthspbx1" Height="40" Canvas.Left="518" Canvas.Top="275" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editMonthspbx_MouseDown"/>
-                <TextBox x:Name="purchasetxt1" Canvas.Left="87" Canvas.Top="56" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Hidden" KeyDown="purchasetxt_KeyDown"/>
-                <TextBox x:Name="deposittxt1" Canvas.Left="87" Canvas.Top="134" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Hidden" KeyDown="deposittxt_KeyDown"/>
-                <Label x:Name="purchasePricelb1" Content="Purchase price" Canvas.Left="84" Canvas.Top="30" FontSize="16"/>
-                <Label x:Name="depositlb1" Content="Total deposit" Canvas.Left="84" Canvas.Top="108" FontSize="16"/>
-                <Label x:Name="interestRatelb1" Content="Interest rate" Canvas.Left="84" Canvas.Top="177" FontSize="16"/>
-                <Label x:Name="monthsToPaylb1" Content="Months to repay between 240 - 360" Canvas.Left="84" Canvas.Top="266" FontSize="16"/>
-                <Label x:Name="purchaseCostlb1" Content="R0" Canvas.Left="87" Canvas.Top="56" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
-                <Label x:Name="depositCostlb1" Content="R0" Canvas.Left="87" Canvas.Top="134" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
-                <Label x:Name="interestlb1" Content="0%" Canvas.Left="87" Canvas.Top="203" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
-                <Label x:Name="monthlb1" Content="240 months" Canvas.Left="84" Canvas.Top="289" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
-                <syncfusion:UpDown x:Name="monthspn1" Height="23" Canvas.Left="91" NullValueText="240" Canvas.Top="295" Value="240" Width="73" FontSize="16" NumberDecimalDigits="0" NullValue="240" MinValue="240" MaxValue="360" Visibility="Hidden" KeyDown="monthspn_KeyDown"/>
-                <TextBox x:Name="interesttxt1" Canvas.Left="91" Canvas.Top="211" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Hidden" KeyDown="interesttxt_KeyDown"/>
+            <RadioButton x:Name="norbtn" Content="No" Height="25" Canvas.Left="398" Canvas.Top="94" Width="90" FontSize="16" GroupName="carGrp" Checked="norbtn_Checked"/>
+            <Canvas x:Name="vehiclePurchasepnl" Height="420" Canvas.Left="19" Canvas.Top="136" Width="578" Visibility="Visible">
+                <Image x:Name="vehiclepbx1" Height="52" Canvas.Left="15" Canvas.Top="30" Width="51" Source="/VehicleImg.png"/>
+                <Image x:Name="vehiclepbx2" Height="52" Canvas.Left="15" Canvas.Top="108" Width="51" Source="/VehicleImg.png"/>
+                <Image x:Name="vehiclepbx3" Height="52" Canvas.Left="15" Canvas.Top="185" Width="51" Source="/VehicleImg.png"/>
+                <Image x:Name="vehiclepbx4" Height="52" Canvas.Left="15" Canvas.Top="269" Width="51" Source="/VehicleImg.png"/>
+                <Image x:Name="editModelpbx" Height="40" Canvas.Left="518" Canvas.Top="36" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editModelpbx_MouseDown"/>
+                <Image x:Name="editVehicleCostpbx" Height="40" Canvas.Left="518" Canvas.Top="114" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editVehicleCostpbx_MouseDown"/>
+                <Image x:Name="editVehicleDepositpbx" Height="40" Canvas.Left="518" Canvas.Top="191" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editVehicleDepositpbx_MouseDown"/>
+                <Image x:Name="editVehicleInterestpbx" Height="40" Canvas.Left="518" Canvas.Top="275" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editVehicleInterestpbx_MouseDown"/>
+                <TextBox x:Name="modeltxt" Canvas.Left="87" Canvas.Top="56" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Hidden" KeyDown="modeltxt_KeyDown"/>
+                <TextBox x:Name="vehicleCosttxt" Canvas.Left="87" Canvas.Top="134" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Hidden" KeyDown="vehicleCosttxt_KeyDown"/>
+                <Label x:Name="modellb" Content="Model and Make" Canvas.Left="84" Canvas.Top="30" FontSize="16"/>
+                <Label x:Name="vehiclePurchaselb" Content="Purchase price" Canvas.Left="84" Canvas.Top="108" FontSize="16"/>
+                <Label x:Name="vehicleDepositlb" Content="Total deposit" Canvas.Left="84" Canvas.Top="177" FontSize="16"/>
+                <Label x:Name="vehicleInterestlb" Content="Interest rate" Canvas.Left="84" Canvas.Top="266" FontSize="16"/>
+                <Label x:Name="modelSavelb" Content="Please enter the model and make" Canvas.Left="87" Canvas.Top="56" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
+                <Label x:Name="vehicleCostlb" Content="R0" Canvas.Left="87" Canvas.Top="134" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
+                <Label x:Name="vehicleDepositCostlb" Content="R0" Canvas.Left="87" Canvas.Top="203" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
+                <TextBox x:Name="vehicleDeposittxt" Canvas.Left="91" Canvas.Top="211" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Visible" KeyDown="vehicleDeposittxt_KeyDown"/>
+                <Image x:Name="vehiclepbx5" Height="52" Canvas.Left="15" Canvas.Top="343" Width="51" Source="/VehicleImg.png"/>
+                <Label x:Name="insurancelb" Content="Estimated monthly insurance premium" Canvas.Left="87" Canvas.Top="343" FontSize="16"/>
+                <Label x:Name="vehicleInterestPerclb" Content="0%" Canvas.Left="87" Canvas.Top="295" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
+                <Label x:Name="insuranceCostlb" Content="R0" Canvas.Left="87" Canvas.Top="369" FontSize="16" FontWeight="Bold" Foreground="#FF60B64F" RenderTransformOrigin="0.64,0.707"/>
+                <TextBox x:Name="vehicleInteresttxt" Canvas.Left="91" Canvas.Top="303" Text="0" TextWrapping="Wrap" Width="186" FontSize="16" Visibility="Visible" KeyDown="vehicleInteresttxt_KeyDown"/>
+                <TextBox x:Name="insurancetxt" Canvas.Left="91" Canvas.Top="377" Text="0" TextWrapping="Wrap" Width="190" FontSize="16" Visibility="Visible" KeyDown="insurancetxt_KeyDown"/>
+                <Image x:Name="editinsurancelb" Height="40" Canvas.Left="518" Canvas.Top="346" Width="39" Source="/edit-icon.png" RenderTransformOrigin="0.265,0.5" MouseDown="editinsurancelb_MouseDown"/>
             </Canvas>
-            <Label x:Name="choiceError1" Content="Please select an accomodation type." Height="49" Canvas.Left="155" Canvas.Top="531" Width="306" FontSize="16" Visibility="Hidden"/>
-            <Label x:Name="accomErrorlb1" Content="There are errors with you amounts please try again.&#xA;&#x9;All decimals must use a period (.)&#xA;&#x9;   and no spaces are allowed." Canvas.Left="95" Canvas.Top="556" Height="76" FontSize="16" Visibility="Hidden" />
+            <Label x:Name="vehicleErrorlb" Content="Please choose if you are buying a vehicle or not." Canvas.Left="115" Canvas.Top="565" FontSize="16" Visibility="Hidden"/>
+            <Label x:Name="vehicleFormatError" Content="There are errors with you amounts please try again.&#xA;&#x9;All decimals must use a period (.)&#xA;&#x9;   and no spaces are allowed." Canvas.Left="95" Canvas.Top="556" Height="76" FontSize="16" Visibility="Hidden" />
             <Image x:Name="previouspbx1" Height="52" Canvas.Left="38" Canvas.Top="651" Width="51" Source="/back-icon.png" MouseDown="previouspbx_MouseDown"/>
             <Label x:Name="choicelb" Content="Are you purchasing a vehicle?" Canvas.Left="12" Canvas.Top="86" FontSize="16"/>
+            <Button x:Name="completebtn" Content="Complete" Height="50" Canvas.Left="204" Canvas.Top="652" Width="208" Foreground="White" FontSize="18" Click="completebtn_Click">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Button}" >
+                        <Setter Property="Background" Value="#FF60B64F"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}" CornerRadius="25">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#4c913f"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+
+                </Button.Resources>
+            </Button>
+            <Label x:Name="modelErrorlb" Content="Please enter the vehicle model/make." Canvas.Left="158" Canvas.Top="573" FontSize="16" Visibility="Hidden"/>
         </Canvas>
     </Grid>
 
